@@ -1377,13 +1377,13 @@ for(var i = 0; i < sections.length; i++) {
 		continue;
 
 	// checked?
-	var checked = 'checked';
+	var checked = true;
 	if($('#vboxIndex').data('vboxCookies')["vboxSectionShow"+sections[i].replace(' ','')] == 0)
-		checked = '';
+		checked = false;
 	
 	var li = $('<li />').attr('id','vboxDetailsShowMenuItem'+sections[i].replace(' ',''));
 
-	$(li).append($('<label />').append($('<input />').attr({'type':'checkbox','class':'vboxCheckbox','name':sections[i].replace(' ',''),'checked':checked}).click(function(){
+	$(li).append($('<label />').append($('<input />').attr({'type':'checkbox','class':'vboxCheckbox','name':sections[i].replace(' ','')}).prop('checked',checked).click(function(){
 
 		vboxSetCookie("vboxSectionShow"+$(this).attr('name'),(this.checked ? 1 : 0));
 		$('#vboxDetailsTableBox'+$(this).attr('name')).css('display',(this.checked ? '' : 'none'));
